--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -67,7 +67,7 @@ input {
   padding: 5px 10px;
   margin-bottom: 10px;
   height: 42px;
-  /* background: var(--muted); */
+  background: var(--muted);
   color: var(--text);
   cursor: pointer;
   font-weight: bold;
